# endstone-warps

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  endgit.json  plugin.json  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml
src/endstone_warps/: __init__.py  config.toml  database.py  listener.py  warps.py
