[project]
name = "endstone-warps"
version = "1.0.3"
description = "A lightweight warp plugin for Endstone."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "endstone>=0.11.3",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "git-cliff>=2.12.0",
    "ruff>=0.15.10",
]

[project.entry-points."endstone"]
warps = "endstone_warps:Warps"
